# rust-monorepo

./: .gitignore  .gitmodules  Cargo.toml  README.md  docker-compose.yaml  nx.json  package-lock.json  package.json
libs/config_libs/: Cargo.toml  project.json
libs/config_libs/src/: lib.rs
libs/kafka_libs/: Cargo.toml  project.json
libs/kafka_libs/src/: lib.rs
libs/logger_libs/: Cargo.toml  project.json
libs/logger_libs/src/: lib.rs
libs/pgsql_libs/: Cargo.toml  project.json
libs/pgsql_libs/src/: lib.rs
libs/proto_libs/: Cargo.toml  build.rs  project.json
libs/proto_libs/proto/: post.proto
libs/proto_libs/src/: lib.rs
libs/rabbitmq_libs/: Cargo.toml  project.json
libs/rabbitmq_libs/src/: lib.rs
libs/redis_libs/: Cargo.toml  project.json
libs/redis_libs/src/: lib.rs
