[package]
name = "kafka_libs"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.37.0", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
actix-rt = "2.5.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
