[package]
name = "logger_libs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"                             
serde_json = "1.0"                              
serde = { version = "1.0.210", features = ["derive"] }
regex = "1.5"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
