[package]
name = "proto_libs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tokio = { version = "1", features = ["full"] }
tonic-reflection = "0.12.3"
prost = "0.13.4"

[build-dependencies]
tonic-build = "0.12.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
